--- a/APP/Android/PointsLeague/app/src/main/res/layout/fragment_account.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/fragment_account.xml
@@ -6,12 +6,12 @@
     android:orientation="vertical"
     >
 
-    <!--<ImageView-->
-        <!--android:id="@+id/img_popularize"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="260dp"-->
-        <!--android:scaleType="fitXY"-->
-        <!--android:src="@drawable/ad1" />-->
+    <ImageView
+        android:id="@+id/img_popularize"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ad1" />
 
     <LinearLayout
         android:layout_width="match_parent"
