完善沉浸式状态栏

--- a/APP/Android/PointsLeague/app/src/main/res/layout/fragment_account.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/fragment_account.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
-        android:src="@drawable/ad1" />
+        android:src="@drawable/navi_background" />
 
     <LinearLayout
         android:layout_width="match_parent"
