--- a/APP/Android/PointsLeague/app/src/main/res/layout/custom_list_item.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/custom_list_item.xml
@@ -1,25 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="10dp">
+    android:layout_height="70dp"
+    android:gravity="center">
 
-    <ImageView
-        android:id="@+id/imageView_custom_list_item"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_points_black_24dp"
-        android:layout_marginEnd="20dp"/>
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textView_custom_list_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:text="TextView"
-        android:textSize="18sp"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/imageView_custom_list_item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="15dp"
+                android:adjustViewBounds="true"
+                app:srcCompat="@drawable/ic_points_black_24dp" />
+
+            <TextView
+                android:id="@+id/textView_custom_list_item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="TextView"
+                android:textColor="@color/colorBlack"
+                android:textSize="18sp" />
+        </LinearLayout>
 
 
-</LinearLayout>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginEnd="10dp"
+                android:adjustViewBounds="true"
+                app:srcCompat="@drawable/ic_chevron_right_grey_24dp" />
+        </RelativeLayout>
+
+
+    </RelativeLayout>
+</FrameLayout>
