--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_user_setting.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_user_setting.xml
@@ -18,7 +18,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
-                android:src="@drawable/navi_background" />
+                android:src="@drawable/navi_background2" />
         </RelativeLayout>
 
         <!--头像-->
@@ -38,7 +38,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="我的"
+                    android:text="用户设置"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     android:textColor="@color/colorBlack"
@@ -49,45 +49,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_gravity="center"
                     app:srcCompat="@drawable/portrait_1" />
-                <RelativeLayout
-                    android:id="@+id/linearlayout_account_info_account"
-                    android:layout_width="wrap_content"
-                    android:layout_height="70dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_gravity="center"
-                    android:orientation="vertical"
-                    android:gravity="center">
 
-                    <Button
-                        android:id="@+id/button_login"
-                        android:layout_width="250dp"
-                        android:layout_height="50dp"
-                        android:layout_centerInParent="true"
-                        android:background="@drawable/login_button"
-                        android:visibility="invisible" />
-                    <TextView
-                        android:id="@+id/textview_account"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentStart="true"
-                        android:textAlignment="center"
-                        android:text="yiner"
-                        android:textSize="32sp"
-                        android:textColor="@color/colorBlack"/>
-
-                    <TextView
-                        android:id="@+id/textview_account_position"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentStart="true"
-                        android:text="Guangzhou, China"
-                        android:textAlignment="center"
-                        android:textColor="#808080"
-                        android:textSize="20sp" />
-
-                </RelativeLayout>
             </LinearLayout>
 
 
@@ -111,17 +73,6 @@
                 >
             </ListView>
         </android.support.v7.widget.CardView>
-
-
-
-        <Button
-            android:id="@+id/button_logout_account"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/pic_logout"
-            android:textColor="@color/colorWhite"/>
 
     </LinearLayout>
 
