--- a/APP/IOS/PointExchange/PointExchange/PointHistoryDetailTableViewCell.xib
+++ b/APP/IOS/PointExchange/PointExchange/PointHistoryDetailTableViewCell.xib
@@ -13,10 +13,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="PointHistoryDetailTableViewCell" customModule="PointExchange" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="343" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="line" translatesAutoresizingMaskIntoConstraints="NO" id="swy-jJ-WHQ">
@@ -26,30 +26,34 @@
                             <constraint firstAttribute="width" constant="2" id="mQl-5h-TS9"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7M7-hl-fWh">
-                        <rect key="frame" x="64" y="12" width="63" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7M7-hl-fWh">
+                        <rect key="frame" x="64" y="12" width="40" height="19.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="0.65490196078431373" green="0.65490196078431373" blue="0.65490196078431373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="merchantpoint" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p0f-Md-0nc">
-                        <rect key="frame" x="139" y="12" width="65" height="20"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="merchantpoint" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p0f-Md-0nc">
+                        <rect key="frame" x="140" y="12" width="68" height="20"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="0.65490196079999996" green="0.65490196079999996" blue="0.65490196079999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="citipoint" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bcy-Bd-ViR">
-                        <rect key="frame" x="238" y="12" width="59" height="20"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="citipoint" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bcy-Bd-ViR">
+                        <rect key="frame" x="268" y="12" width="59" height="20"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="0.65490196079999996" green="0.65490196079999996" blue="0.65490196079999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="bcy-Bd-ViR" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="0NU-tf-cpp"/>
+                    <constraint firstItem="p0f-Md-0nc" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="8nZ-fV-D1r"/>
                     <constraint firstItem="swy-jJ-WHQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="EEb-2f-JIJ"/>
+                    <constraint firstItem="7M7-hl-fWh" firstAttribute="leading" secondItem="swy-jJ-WHQ" secondAttribute="trailing" constant="32" id="Gih-68-zgF"/>
+                    <constraint firstItem="p0f-Md-0nc" firstAttribute="leading" secondItem="7M7-hl-fWh" secondAttribute="trailing" constant="36" id="MrX-rG-tZi"/>
+                    <constraint firstItem="bcy-Bd-ViR" firstAttribute="leading" secondItem="p0f-Md-0nc" secondAttribute="trailing" constant="60" id="QRt-fM-vdX"/>
+                    <constraint firstItem="7M7-hl-fWh" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="kkP-0u-Ftq"/>
+                    <constraint firstAttribute="trailing" secondItem="bcy-Bd-ViR" secondAttribute="trailing" constant="16" id="ltA-OR-AnT"/>
                 </constraints>
             </tableViewCellContentView>
             <constraints>
@@ -62,6 +66,7 @@
                 <outlet property="merchantPointLabel" destination="p0f-Md-0nc" id="ZJP-4e-n7n"/>
                 <outlet property="pointLabel" destination="bcy-Bd-ViR" id="Wv2-xa-h5B"/>
             </connections>
+            <point key="canvasLocation" x="24.5" y="52"/>
         </tableViewCell>
     </objects>
     <resources>
