--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_paying.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_paying.xml
@@ -23,7 +23,9 @@
     <com.citiexchangeplatform.pointsleague.TitleBar
         android:id="@+id/title_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
     <LinearLayout
         android:id="@+id/search_bar_exchange"
