--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_user_setting.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_user_setting.xml
@@ -28,21 +28,17 @@
             android:layout_gravity="center"
             android:layout_centerHorizontal="true"
             >
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="20dp"
                 android:orientation="vertical">
+                <com.citiexchangeplatform.pointsleague.TitleBar
+                    android:id="@+id/title_bar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="用户设置"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorBlack"
-                    />
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -61,7 +57,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="65dp"
         android:padding="20dp">
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -70,6 +66,8 @@
                 android:id="@+id/listView_menu_account"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:divider="@drawable/list_divider_bg"
+                android:dividerHeight="1dp"
                 >
             </ListView>
         </android.support.v7.widget.CardView>
