--- a/APP/Android/PointsLeague/app/src/main/res/layout/fragment_account.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/fragment_account.xml
@@ -100,14 +100,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="15dp"
-        android:padding="20dp">
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp">
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp">
             <ListView
                 android:id="@+id/listView_menu_account"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:divider="@drawable/list_divider_bg"
+                android:dividerHeight="1dp"
                 >
             </ListView>
         </android.support.v7.widget.CardView>
@@ -119,7 +123,7 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="15dp"
             android:background="@drawable/pic_logout"
             android:textColor="@color/colorWhite"/>
 
