--- a/APP/Android/PointsLeague/app/src/main/res/layout/item_points_record_parent.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/item_points_record_parent.xml
@@ -1,43 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginHorizontal="10dp"
-    android:background="#213a3a3a"
-    android:gravity="center_vertical"
+    android:layout_height="80dp"
     android:orientation="horizontal"
-    android:padding="20dp">
-
-
+    android:background="@color/colorWhite">
     <TextView
         android:id="@+id/textView_id"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="0"
         android:layout_height="wrap_content"
         android:visibility="invisible" />
 
-
-    <TextView
-        android:id="@+id/textView_exchange_date"
+    <RelativeLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
         android:layout_weight="1"
-        android:textColor="#000"
-        tools:text="交易时间" />
+        android:layout_height="match_parent">
+        <View
+            android:id="@+id/timeline"
+            android:layout_width="1dp"
+            android:layout_height="80dp"
+            android:background="@color/colorUnable"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"/>
+        <View
+            android:id="@+id/timeline_end"
+            android:layout_width="1dp"
+            android:layout_height="40dp"
+            android:background="@color/colorUnable"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"/>
+        <ImageView
+            android:id="@+id/imageView_history_exchange_item"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
 
-    <TextView
-        android:id="@+id/textView_total_exchange_points"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:textColor="#000"
-        tools:text="总兑换花旗点" />
+    <FrameLayout
+        android:layout_width="0dp"
+        android:layout_weight="3"
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/textView_exchange_date"
+            android:layout_gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Aug 8.2018"
+            android:maxEms="10"
+            android:singleLine="true"
+            android:textStyle="bold"
+            android:textSize="22sp"/>
+    </FrameLayout>
 
-    <Button
-        android:id="@+id/refresh"
-        android:layout_width="25dp"
-        android:layout_height="20dp"
-        android:background="@drawable/ic_expand_more_black_24dp"
-        android:textAllCaps="false" />
+    <FrameLayout
+        android:layout_weight="3"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingEnd="20dp">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="+"
+                android:textStyle="bold"
+                android:textSize="22sp"/>
+            <TextView
+                android:layout_gravity="center_vertical|end"
+                android:id="@+id/textView_total_exchange_points"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="100.00"
+                android:textStyle="bold"
+                android:textSize="22sp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="P"
+                android:textStyle="bold"
+                android:textSize="22sp"/>
+        </LinearLayout>
+
+
+    </FrameLayout>
+
 </LinearLayout>
