--- a/APP/Android/PointsLeague/app/src/main/res/layout/points_exchange_item_parent.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/points_exchange_item_parent.xml
@@ -1,48 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/colorWhite"
-    android:id="@+id/container">
+    android:layout_height="80dp"
+    android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/expend"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="5dp"
-        android:layout_marginEnd="5dp"
-        android:background="@drawable/ic_expand_more_black_24dp" />
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="match_parent">
+        <View
+            android:id="@+id/timeline"
+            android:layout_width="1dp"
+            android:layout_height="80dp"
+            android:background="@color/colorUnable"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"/>
+        <View
+            android:layout_width="1dp"
+            android:layout_height="40dp"
+            android:background="@color/colorUnable"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"/>
+        <ImageView
+            android:id="@+id/textView_exchange_date"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/parent_layout"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:orientation="horizontal" >
+    <FrameLayout
+        android:layout_width="0dp"
+        android:layout_weight="3"
+        android:layout_height="match_parent">
         <TextView
+            android:id="@+id/textView_date_history_exchange_item"
+            android:layout_gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Aug 8.2018"
+            android:textStyle="bold"
+            android:textSize="24sp"/>
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_weight="3"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingEnd="20dp">
+        <TextView
+            android:layout_gravity="center_vertical|end"
             android:id="@+id/textView_total_points"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-100.00"
+            android:textStyle="bold"
             android:textSize="24sp"/>
 
-        <TextView
-            android:id="@+id/textView_exchange_date"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:gravity="center"
-            android:textSize="16sp"/>
-    </LinearLayout>
+    </FrameLayout>
 
-    <View
-        android:id="@+id/parent_dashed_view"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layerType="software"
-        android:layout_below="@id/parent_layout"
-        android:background="@drawable/dashed_style_view"/>
-
-</RelativeLayout>
+</LinearLayout>
